--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,20 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<javaVersion>1.6</javaVersion>
+		<javaVersion>1.8</javaVersion>
 		<documentationURL />
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<net.java.html.version>1.1</net.java.html.version>
+		<netbeans.compile.on.save>none</netbeans.compile.on.save>
+		<project.mainclass>org.gogpsproject.GoGPS_Fx</project.mainclass>
 	</properties>
 
 	<dependencies>
-	  <dependency>
-      <groupId>org.gogpsproject</groupId>
-		  <artifactId>goGPS-core</artifactId>
-		  <version>1.0.3</version>
-	  </dependency>
+		<dependency>
+			<groupId>org.gogpsproject</groupId>
+			<artifactId>goGPS-core</artifactId>
+			<version>1.0.3</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-net</groupId>
 			<artifactId>commons-net</artifactId>
@@ -52,11 +56,43 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.json</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.boot</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.sound</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>ko4j</artifactId>
+			<version>${net.java.html.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.boot.script</artifactId>
+			<version>${net.java.html.version}</version>
+			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-		<!-- outputDirectory>${basedir}/bin</outputDirectory  -->
+		<!-- outputDirectory>${basedir}/bin</outputDirectory -->
 		<resources>
 			<resource>
 				<directory>${basedir}/src/main/java</directory>
@@ -70,25 +106,124 @@
 		</resources>
 		<plugins>
 			<plugin>
+				<groupId>org.netbeans.html</groupId>
+				<artifactId>html4j-maven-plugin</artifactId>
+				<version>${net.java.html.version}</version>
+				<executions>
+					<execution>
+						<id>js-classes</id>
+						<goals>
+							<goal>process-js-annotations</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
-	            <artifactId>maven-assembly-plugin</artifactId>
-	            <configuration>
-	                <archive>
-	                    <manifest>
-	                        <mainClass>org.gogpsproject.LiveTracking</mainClass>
-	                    </manifest>
-	                </archive>
-	                <descriptorRefs>
-	                    <descriptorRef>jar-with-dependencies</descriptorRef>
-	                </descriptorRefs>
-	            </configuration>
-	        </plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.gogpsproject.LiveTracking</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>2.2.4</version>
+				<executions>
+					<execution>
+						<id>process</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/generated-sources/annotations</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.netbeans.html</groupId>
+						<artifactId>html4j-maven-plugin</artifactId>
+						<version>${net.java.html.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>${project.mainclass}</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<configuration>
+					<systemProperties>
+						<systemProperty>
+							<key>browser.rootdir</key>
+							<value>${basedir}/src/main/webapp/</value>
+						</systemProperty>
+					</systemProperties>
+					<mainClass>${project.mainclass}</mainClass>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>distro-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/html.java.net.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>fxbrwsr</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.netbeans.html</groupId>
+					<artifactId>net.java.html.boot.fx</artifactId>
+					<version>${net.java.html.version}</version>
+					<scope>runtime</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
