--- a/pom.xml
+++ b/pom.xml
@@ -1,109 +1,24 @@
+<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>org.gogpsproject</groupId>
 	<artifactId>goGPS_FX</artifactId>
-	<version>0.0.1</version>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>goGPS javaFX</name>
 	<url>http://www.gogps-project.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<javaVersion>1.8</javaVersion>
-		<documentationURL />
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<net.java.html.version>1.1</net.java.html.version>
 		<netbeans.compile.on.save>none</netbeans.compile.on.save>
 		<project.mainclass>org.gogpsproject.GoGPS_Fx</project.mainclass>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.gogpsproject</groupId>
-			<artifactId>goGPS-core</artifactId>
-			<version>1.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-net</groupId>
-			<artifactId>commons-net</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>HTTPClient</groupId>
-			<artifactId>HTTPClient</artifactId>
-			<version>0.3-3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
-			<artifactId>ejml</artifactId>
-			<version>0.17</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.argparse4j</groupId>
-			<artifactId>argparse4j</artifactId>
-			<version>0.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.rxtx</groupId>
-			<artifactId>rxtx</artifactId>
-			<version>2.2pre1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/libs/RXTX/RXTXcomm.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>net.java.html</artifactId>
-			<version>${net.java.html.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>net.java.html.json</artifactId>
-			<version>${net.java.html.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>net.java.html.boot</artifactId>
-			<version>${net.java.html.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>net.java.html.sound</artifactId>
-			<version>${net.java.html.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>ko4j</artifactId>
-			<version>${net.java.html.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.netbeans.html</groupId>
-			<artifactId>net.java.html.boot.script</artifactId>
-			<version>${net.java.html.version}</version>
-			<scope>test</scope>
-			<type>jar</type>
-		</dependency>
-	</dependencies>
 	<build>
-		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-		<!-- outputDirectory>${basedir}/bin</outputDirectory -->
-		<resources>
-			<resource>
-				<directory>${basedir}/src/main/java</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-			<resource>
-				<directory>${basedir}/src/main/resources</directory>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.netbeans.html</groupId>
@@ -119,48 +34,14 @@
 				</executions>
 			</plugin>
 			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
 					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>org.gogpsproject.LiveTracking</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.bsc.maven</groupId>
-				<artifactId>maven-processor-plugin</artifactId>
-				<version>2.2.4</version>
-				<executions>
-					<execution>
-						<id>process</id>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources/annotations</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.netbeans.html</groupId>
-						<artifactId>html4j-maven-plugin</artifactId>
-						<version>${net.java.html.version}</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -208,6 +89,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.bsc.maven</groupId>
+				<artifactId>maven-processor-plugin</artifactId>
+				<version>2.2.4</version>
+				<executions>
+					<execution>
+						<id>process</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/generated-sources/annotations</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.netbeans.html</groupId>
+						<artifactId>html4j-maven-plugin</artifactId>
+						<version>${net.java.html.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -243,6 +147,79 @@
 		</pluginManagement>
 
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.json</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.boot</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.sound</artifactId>
+			<version>${net.java.html.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>ko4j</artifactId>
+			<version>${net.java.html.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.boot.script</artifactId>
+			<version>${net.java.html.version}</version>
+			<scope>test</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.gogpsproject</groupId>
+			<artifactId>goGPS-core</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<!--dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>HTTPClient</groupId>
+			<artifactId>HTTPClient</artifactId>
+			<version>0.3-3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
+			<artifactId>ejml</artifactId>
+			<version>0.17</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.argparse4j</groupId>
+			<artifactId>argparse4j</artifactId>
+			<version>0.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.rxtx</groupId>
+			<artifactId>rxtx</artifactId>
+			<version>2.2pre1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libs/RXTX/RXTXcomm.jar</systemPath>
+		</dependency-->
+	</dependencies>
 	<profiles>
 		<profile>
 			<id>fxbrwsr</id>
