--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 				</executions>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+				<version>2.3.2</version>
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
@@ -192,25 +192,15 @@
 			<artifactId>goGPS-core</artifactId>
 			<version>1.0.3</version>
 		</dependency>
-		<!--dependency>
-			<groupId>commons-net</groupId>
-			<artifactId>commons-net</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>HTTPClient</groupId>
-			<artifactId>HTTPClient</artifactId>
-			<version>0.3-3</version>
-		</dependency>
+		<!--dependency> <groupId>commons-net</groupId> <artifactId>commons-net</artifactId> 
+			<version>2.2</version> </dependency> <dependency> <groupId>net.sourceforge.argparse4j</groupId> 
+			<artifactId>argparse4j</artifactId> <version>0.4.1</version> </dependency> 
+			<dependency> <groupId>HTTPClient</groupId> <artifactId>HTTPClient</artifactId> 
+			<version>0.3-3</version> </dependency -->
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
 			<artifactId>ejml</artifactId>
 			<version>0.17</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.argparse4j</groupId>
-			<artifactId>argparse4j</artifactId>
-			<version>0.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.rxtx</groupId>
@@ -218,7 +208,7 @@
 			<version>2.2pre1</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/libs/RXTX/RXTXcomm.jar</systemPath>
-		</dependency-->
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
