Removed option, otherwise it doesn't compile classes

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
-					<compilerArgument>-proc:only</compilerArgument>
+					<!--compilerArgument>-proc:none</compilerArgument-->
 				</configuration>
 			</plugin>
 			<plugin>
