--- a/buildwin/build.xml
+++ b/buildwin/build.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	<project name="goGPS_FX" default="do-deploy" basedir="."  xmlns:fx="javafx:com.sun.javafx.tools.ant">
-	<property name="version" value="1.0-SNAPSHOT"/>
+<project name="goGPS_FX" default="do-deploy" basedir="."
+	xmlns:fx="javafx:com.sun.javafx.tools.ant">
+	<property name="version" value="1.0-SNAPSHOT" />
 	<target name="init-fx-tasks">
 		<path id="fxant">
 			<filelist>
-				<file name="${java.home}/../lib/ant-javafx.jar"/>
-				<file name="${java.home}/lib/jfxrt.jar"/>
-                <file name="${basedir}"/>
+				<file name="${java.home}/../lib/ant-javafx.jar" />
+				<file name="${java.home}/lib/jfxrt.jar" />
+				<file name="${basedir}" />
 			</filelist>
 		</path>
-	
-		<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
-			uri="javafx:com.sun.javafx.tools.ant"
-			classpathref="fxant"/>
+
+		<taskdef resource="com/sun/javafx/tools/ant/antlib.xml" uri="javafx:com.sun.javafx.tools.ant"
+			classpathref="fxant" />
 	</target>
 	<target name="setup-staging-area">
 		<delete dir="externalLibs" />
 		<delete dir="project" />
 		<delete dir="projectRefs" />
-	
+
 		<mkdir dir="externalLibs" />
-	
+
 		<copy todir="externalLibs">
-            <fileset dir="../target/goGPS_FX-${version}-html.java.net/app/lib">
-                <include name="*" />
-            </fileset>
+			<fileset dir="../target/goGPS_FX-${version}-html.java.net/app/lib">
+				<include name="*" />
+			</fileset>
 		</copy>
-        <copy todir="externalLibs">
-            <fileset dir="../libs/RXTX">
-                <filename name="*"/>
-            </fileset>
-        </copy>
-			
+		<copy todir="externalLibs">
+			<fileset dir="../libs/RXTX">
+				<filename name="*" />
+			</fileset>
+		</copy>
+
 		<mkdir dir="project" />
 		<copy todir="project">
 			<fileset dir="../">
@@ -53,7 +53,7 @@
 				<include name="target/generated-sources/annotations/**" />
 			</fileset>
 		</copy>
-	
+
 		<mkdir dir="projectRefs" />
 	</target>
 	<target name='do-compile'>
@@ -61,139 +61,130 @@
 		<mkdir dir="build/src" />
 		<mkdir dir="build/libs" />
 		<mkdir dir="build/classes" />
-	
+
 		<!-- Copy project-libs references -->
 		<copy todir="build/libs">
 			<fileset dir="externalLibs">
-				<include name="**"/>
+				<include name="**" />
 			</fileset>
 		</copy>
-	
+
 		<!-- Copy project references -->
-	
+
 		<!-- Copy project sources itself -->
 		<copy todir="build/src">
 			<fileset dir="project/src/test/java">
-				<include name="**/*"/>
+				<include name="**/*" />
 			</fileset>
 		</copy>
 		<copy todir="build/src">
 			<fileset dir="project/src/main/resources">
-				<include name="**/*"/>
+				<include name="**/*" />
 			</fileset>
 		</copy>
 		<copy todir="build/src">
 			<fileset dir="project/src/main/java">
-				<include name="**/*"/>
+				<include name="**/*" />
 			</fileset>
 		</copy>
-		<!--copy todir="build/src">
-			<fileset dir="project/target/generated-sources/annotations">
-				<include name="**/*"/>
-			</fileset>
-		</copy-->
-	
-		<javac includeantruntime="false" source="1.8" target="1.8" srcdir="build/src" destdir="build/classes" encoding="UTF-8">
+		<!--copy todir="build/src"> <fileset dir="project/target/generated-sources/annotations"> 
+			<include name="**/*"/> </fileset> </copy -->
+
+		<javac includeantruntime="false" source="1.8" target="1.8"
+			srcdir="build/src" destdir="build/classes" encoding="UTF-8">
 			<classpath>
 				<fileset dir="build/libs">
-					<include name="*"/>
+					<include name="*" />
 				</fileset>
 			</classpath>
 		</javac>
-	
+
 		<!-- Copy over none Java-Files -->
 		<copy todir="build/classes">
-		<fileset dir="project/src/test/java">
-			<exclude name="**/*.java"/>
-		</fileset>
-		<fileset dir="project/src/main/resources">
-			<exclude name="**/*.java"/>
-		</fileset>
-		<fileset dir="project/src/main/java">
-			<exclude name="**/*.java"/>
-		</fileset>
-		<fileset dir="project/target/generated-sources/annotations">
-			<exclude name="**/*.java"/>
-		</fileset>
+			<fileset dir="project/src/test/java">
+				<exclude name="**/*.java" />
+			</fileset>
+			<fileset dir="project/src/main/resources">
+				<exclude name="**/*.java" />
+			</fileset>
+			<fileset dir="project/src/main/java">
+				<exclude name="**/*.java" />
+			</fileset>
+			<fileset dir="project/target/generated-sources/annotations">
+				<exclude name="**/*.java" />
+			</fileset>
 		</copy>
-	
-	
+
+
 	</target>
 	<target name="do-deploy" depends="setup-staging-area, do-compile, init-fx-tasks">
-		<delete file="dist"/>
+		<delete file="dist" />
 		<delete file="deploy" />
-	
+
 		<mkdir dir="dist" />
 		<mkdir dir="dist/libs" />
-    <mkdir dir="dist/libs/RXTX" />
+		<mkdir dir="dist/libs/RXTX" />
 		<mkdir dir="dist/src" />
-    <mkdir dir="dist/src/main" />
-    <mkdir dir="dist/src/main/webapp" />
-	
+		<mkdir dir="dist/src/main" />
+		<mkdir dir="dist/src/main/webapp" />
+
 		<copy todir="dist/libs">
 			<fileset dir="externalLibs">
 				<include name="*" />
 			</fileset>
 		</copy>
-	
-    <copy todir="dist/src/main/webapp">
-     <fileset dir="../src/main/webapp">
-        <include name="**/*"/>
-      </fileset>
-    </copy>
-    <copy todir="dist/libs/RXTX">
-     <fileset dir="../libs/RXTX">
-        <include name="**/*"/>
-      </fileset>
-    </copy>
-	
+
+		<copy todir="dist/src/main/webapp">
+			<fileset dir="../src/main/webapp">
+				<include name="**/*" />
+			</fileset>
+		</copy>
+		<copy todir="dist/libs/RXTX">
+			<fileset dir="../libs/RXTX">
+				<include name="**/*" />
+			</fileset>
+		</copy>
+
 		<fx:resources id="appRes">
-			<fx:fileset dir="dist" includes="goGPS_FX.jar"/>
-			<fx:fileset dir="dist" includes="libs/**"/>
-            <fx:fileset dir="dist" includes="src/**"/>
+			<fx:fileset dir="dist" includes="goGPS_FX.jar" />
+			<fx:fileset dir="dist" includes="libs/**" />
+			<fx:fileset dir="dist" includes="src/**" />
 		</fx:resources>
-	
-		<fx:application id="fxApplication"
-			name="goGPS_FX"
-			mainClass="org.gogpsproject.GoGPS_Fx"
-			version="${version}"
-		/>
-	
+
+		<fx:application id="fxApplication" name="goGPS_FX"
+			mainClass="org.gogpsproject.fx.GoGPS_Fx" version="${version}" />
+
 		<mkdir dir="build/classes/META-INF" />
-	
+
 		<fx:jar destfile="dist/goGPS_FX.jar">
-			<fx:application refid="fxApplication"/>
+			<fx:application refid="fxApplication" />
 			<fileset dir="build/classes">
 			</fileset>
-			<fx:resources refid="appRes"/>
-	
+			<fx:resources refid="appRes" />
+
 			<manifest>
-				<attribute name="Implementation-Vendor" value="goGPS"/>
-				<attribute name="Implementation-Title" value="goGPS_FX"/>
-				<attribute name="Implementation-Version" value="${version}"/>
-				<attribute name="JavaFX-Feature-Proxy" value="None"/>
+				<attribute name="Implementation-Vendor" value="goGPS" />
+				<attribute name="Implementation-Title" value="goGPS_FX" />
+				<attribute name="Implementation-Version" value="${version}" />
+				<attribute name="JavaFX-Feature-Proxy" value="None" />
 			</manifest>
 		</fx:jar>
-	
-	
+
+
 		<mkdir dir="deploy" />
-		<!-- Need to use ${basedir} because somehow the ant task is calculating the directory differently -->
-		<fx:deploy
-			embedJNLP="false"
-			extension="false"
-			includeDT="false"
-			offlineAllowed="true"
-			outdir="${basedir}/deploy"
-			outfile="goGPS_FX" nativeBundles="all"
-			updatemode="background" >
-	
-			<fx:platform basedir="${java.home}"/>
-			<fx:info title="goGPS_FX" vendor="goGPS"/>
-	
-			<fx:application refId="fxApplication"/>
-			<fx:resources refid="appRes"/>
+		<!-- Need to use ${basedir} because somehow the ant task is calculating 
+			the directory differently -->
+		<fx:deploy embedJNLP="false" extension="false" includeDT="false"
+			offlineAllowed="true" outdir="${basedir}/deploy" outfile="goGPS_FX"
+			nativeBundles="all" updatemode="background">
+
+			<fx:platform basedir="${java.home}" />
+			<fx:info title="goGPS_FX" vendor="goGPS" />
+
+			<fx:application refId="fxApplication" />
+			<fx:resources refid="appRes" />
 		</fx:deploy>
-	
-	
+
+
 	</target>
 </project>
