--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.gogpsproject</groupId>
 	<artifactId>goGPS_FX</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 	<name>goGPS javaFX</name>
 	<url>http://www.gogps-project.org</url>
@@ -15,19 +15,32 @@
 		<javaVersion>1.8</javaVersion>
 		<net.java.html.version>1.1</net.java.html.version>
 		<netbeans.compile.on.save>none</netbeans.compile.on.save>
-		<project.mainclass>org.gogpsproject.GoGPS_Fx</project.mainclass>
+		<project.mainclass>org.gogpsproject.fx.GoGPS_Fx</project.mainclass>
 	</properties>
 
 	<build>
 		<plugins>
+          <plugin>
+              <groupId>org.netbeans.html</groupId>
+              <artifactId>html4j-maven-plugin</artifactId>
+              <version>${net.java.html.version}</version>
+              <executions>
+                  <execution>
+                      <id>js-classes</id>
+                      <goals>
+                          <goal>process-js-annotations</goal>
+                      </goals>
+                  </execution>
+              </executions>
+          </plugin>          
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+                <version>2.3.2</version>
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
-					<!--compilerArgument>-proc:none</compilerArgument-->
+					<compilerArgument>-proc:none</compilerArgument>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -89,9 +102,6 @@
 						<configuration>
 							<outputDirectory>target/generated-sources/annotations</outputDirectory>
 						</configuration>
-						<phase>
-						  process-classes
-						</phase>
 					</execution>
 				</executions>
 				<dependencies>
@@ -99,11 +109,42 @@
 						<groupId>org.netbeans.html</groupId>
 						<artifactId>html4j-maven-plugin</artifactId>
 						<version>${net.java.html.version}</version>
-                        <scope>compile</scope>
 					</dependency>
 				</dependencies>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.netbeans.html</groupId>
+										<artifactId>
+											html4j-maven-plugin
+										</artifactId>
+										<versionRange>[1.1,)</versionRange>
+										<goals>
+											<goal>process-js-annotations</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 	<dependencies>
 		<dependency>
@@ -150,11 +191,6 @@
 			<artifactId>goGPS-core</artifactId>
 			<version>1.0.3</version>
 		</dependency>
-		<!--dependency> <groupId>commons-net</groupId> <artifactId>commons-net</artifactId> 
-			<version>2.2</version> </dependency> <dependency> <groupId>net.sourceforge.argparse4j</groupId> 
-			<artifactId>argparse4j</artifactId> <version>0.4.1</version> </dependency> 
-			<dependency> <groupId>HTTPClient</groupId> <artifactId>HTTPClient</artifactId> 
-			<version>0.3-3</version> </dependency -->
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
 			<artifactId>ejml</artifactId>
@@ -177,9 +213,8 @@
 			<artifactId>asm</artifactId>
 			<version>5.0.3</version>
 		</dependency>
-		<!--dependency> <groupId>org.sonatype.plexus</groupId> <artifactId>plexus-build-api</artifactId> 
-			<version>0.0.7</version> </dependency -->
 	</dependencies>
+
 	<profiles>
 		<profile>
 			<id>fxbrwsr</id>
@@ -195,11 +230,6 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!--profile> <id>qa</id> <build> <plugins> <plugin> <artifactId>maven-dependency-plugin</artifactId> 
-			<executions> <execution> <phase>install</phase> <goals> <goal>copy-dependencies</goal> 
-			</goals> <configuration> <outputDirectory>${project.build.directory}/lib</outputDirectory> 
-			</configuration> </execution> </executions> </plugin> </plugins> </build> 
-			</profile -->
 	</profiles>
 </project>
 
