--- a/buildwin/build.xml
+++ b/buildwin/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="goGPS_FX" default="do-deploy" basedir="."
 	xmlns:fx="javafx:com.sun.javafx.tools.ant">
-	<property name="version" value="1.0-SNAPSHOT" />
+	<property name="version" value="0.3" />
 	<target name="init-fx-tasks">
 		<path id="fxant">
 			<filelist>
@@ -22,7 +22,7 @@
 		<mkdir dir="externalLibs" />
 
 		<copy todir="externalLibs">
-			<fileset dir="../target/goGPS_FX-${version}-html.java.net/app/lib">
+			<fileset dir="../target/goGPS_FX-0.${version}-html.java.net/app/lib">
 				<include name="*" />
 			</fileset>
 		</copy>
