--- a/pom.xml
+++ b/pom.xml
@@ -207,11 +207,28 @@
 			<groupId>org.netbeans.html</groupId>
 			<artifactId>html4j-maven-plugin</artifactId>
 			<version>${net.java.html.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ow2.asm</groupId>
 			<artifactId>asm</artifactId>
 			<version>5.0.3</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		  <groupId>com.dukescript.api</groupId>
+		  <artifactId>leaflet4j</artifactId>
+		  <version>0.7</version>
+		</dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+		<dependency>
+		    <groupId>net.java.dev.jna</groupId>
+		    <artifactId>platform</artifactId>
+		    <version>3.5.2</version>
 		</dependency>
 	</dependencies>
 
