--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.gogpsproject</groupId>
 	<artifactId>goGPS_FX</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4</version>
 	<packaging>jar</packaging>
 	<name>goGPS javaFX</name>
 	<url>http://www.gogps-project.org</url>
@@ -189,7 +189,7 @@
 		<dependency>
 			<groupId>org.gogpsproject</groupId>
 			<artifactId>goGPS-core</artifactId>
-			<version>1.0.3</version>
+            <version>1.0.3-SnapshotGps</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
