--- a/pom.xml
+++ b/pom.xml
@@ -20,23 +20,23 @@
 
 	<build>
 		<plugins>
-          <plugin>
-              <groupId>org.netbeans.html</groupId>
-              <artifactId>html4j-maven-plugin</artifactId>
-              <version>${net.java.html.version}</version>
-              <executions>
-                  <execution>
-                      <id>js-classes</id>
-                      <goals>
-                          <goal>process-js-annotations</goal>
-                      </goals>
-                  </execution>
-              </executions>
-          </plugin>          
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+				<groupId>org.netbeans.html</groupId>
+				<artifactId>html4j-maven-plugin</artifactId>
+				<version>${net.java.html.version}</version>
+				<executions>
+					<execution>
+						<id>js-classes</id>
+						<goals>
+							<goal>process-js-annotations</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+				<version>2.3.2</version>
 				<configuration>
 					<source>${javaVersion}</source>
 					<target>${javaVersion}</target>
@@ -189,7 +189,7 @@
 		<dependency>
 			<groupId>org.gogpsproject</groupId>
 			<artifactId>goGPS-core</artifactId>
-            <version>1.0.3-SnapshotGps</version>
+			<version>1.0.3-SnapshotGps_0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.efficient-java-matrix-library</groupId>
@@ -216,19 +216,24 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		  <groupId>com.dukescript.api</groupId>
-		  <artifactId>leaflet4j</artifactId>
-		  <version>0.7</version>
+			<groupId>com.dukescript.api</groupId>
+			<artifactId>leaflet4j</artifactId>
+			<version>0.7</version>
 		</dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>4.0.0</version>
-        </dependency>
 		<dependency>
-		    <groupId>net.java.dev.jna</groupId>
-		    <artifactId>platform</artifactId>
-		    <version>3.5.2</version>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>platform</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.netbeans.html</groupId>
+			<artifactId>net.java.html.geo</artifactId>
+			<version>1.2</version>
 		</dependency>
 	</dependencies>
 
